# aptod

./: .gitignore  README.md  aptod.py  aptod_run.py  asd.py  pyproject.toml  requirements.txt  setup.py  test.py
aptod/: __main__.py  aptod.py  down_suite.py  extract_suite.py  file_suite.py  icon_repo_finder.py  logo_maker.py  up_suite.py  utils.py
aptod/data/: default_apps.py  example.desktop
src/aptod/: __main__.py  aptod.py  file_suite.py  up_suite.py
src/aptod/data/: default_apps.py
src/aptod/utils/: __init__.py  icon_handler.py
